--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,21 @@
 server:
   port: 3001
+spring:
+  data:
+    redis:
+      redis-mode-cluster: false
+      ssl:
+        enabled: false
+      cluster:
+        cache-name:
+          otp:
+            ttl: 60
+      host: localhost
+      port: 6379
+      client-type: lettuce
+      lettuce:
+        cluster:
+          refresh:
+            period: ${REDIS_CLUSTER_TOPOLOGY_REFRESH_PERIOD_IN_SECONDS}
+        pool:
+          max-active: 1
